2005-07-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genMinus): fixed bug #1241835,
	  (genModOneByte): removed needless psha/pula

2005-07-22 Raphael Neider <rneider AT web.de>

	* src/SDCCmain.c (linkEdit): initialized linkerScriptFileName,
	  have PIC14 handled like PIC16, fixes broken pic14 linker calls
	* src/pic/gen.c (resolveIfx): do not "invent" labels
	* (genSkipc): changed to positive logic
	* (genSkipCond): removed as no longer needed
	* (pic14_mov2w_regOrLit,genCmp): NEW, replacement for buggy version,
	  backport from PIC16
	* (genLeftShift): check operands are in different registers
	* src/pic/genarith.c (genPlus): replaced INCF with ADDLW as
	  INCF does not update CARRY...
	* src/pic/main.c: fixed _linkCmd
	* src/pic/pcode.c (unlinkpCode): added inactive code
	* src/pic/ralloc.c (deassignLRs): keep arguments to shift operations
	  alive (do not assign result and operand overlapping registers)

2005-07-22 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (dump_sfr): replaced register declaration with
	  call to emitSymbolToFile() to avoid duplicate symbols
	* (assignRelocatableRegisters): do not declare external symbols
	* src/pic/ralloc.c (allocNewDirReg): fixed to get size of arrays
	  right (take size of type, not etype)
	* (allocDirReg): fixed call to allocNewDirReg() to pass OP_SYM_TYPE
	* (writeUsedRegs): also dump dynDirectRegs (e.g. local variables)
	* (packRegsForAccUse): disabled assignment of WREG as
	  the result reg to prevent occurence of just fixed #1235003,
	  fixes #1242954
	* src/pic/glue.c (emitSymbolToFile): NEW, central place to declare
	  symbols (avoids duplicate symbols in .asm file)
	* (pic14emitRegularMap): use emitSymbolToFile()
	* src/pic/gen.c (aopOp): fixed spillLocation handling
	* (gen{Unp,P}ackBits): fixed acquiring bit-operands
	* (genDataPointerSet): removed unneccessary variables/output

2005-07-22 Maarten Brock <sourceforge.brock AT dse.nl>