@@ -1,3 +1,7 @@
+2005-07-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCloop.c (loopInvariants): fixed bug #1234048
+
 2005-07-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/hc08/gen.c (genMinus): fixed bug #1241835,
